--- a/_posts/2023-04-03-first-day.markdown
+++ b/_posts/2023-04-03-first-day.markdown
@@ -20,7 +20,7 @@ Some cute pics of the cafe!
 
 
 
-The coffee was alright and so was the oatmeal...but also I don't think I was in the position to be judging their food because I could not really eat properly. BASICALLY I've been having trouble because my wisdom teeth are growing in and for the past week I could not open my mouth more than half and inch because myleft jaw is inflamed. So yeah eating food has been really not fun and actually quite painful. I have been sticking to coffee, smoothies, soups, and it kinda sucks :sweat:. I definitely need to come back to this place to try their sandos though because they looked really yum. Hermab got this herb omelette sandwich and it looked :fire:.
+The coffee was alright and so was the oatmeal...but also I don't think I was in the position to be judging their food because I could not really eat properly. BASICALLY I've been having trouble because my wisdom teeth are growing in and for the past week I could not open my mouth more than half and inch because my left jaw is inflamed. So yeah eating food has been really not fun and actually quite painful. I have been sticking to coffee, smoothies, soups, and it kinda sucks :sweat:. I definitely need to come back to this place to try their sandos though because they looked really yum. Heramb got this herb omelette sandwich and it looked :fire:.
 
 After a couple of hours of working though, I got quite hungry. The coffee and oatmeal were definitely not enough to sustain me until dinner, so I went to find some ramen. Heramb suggested Danbo Ramen, which was in the West Village, around a 20 minute walk up from the cafe. I got there and sat by myself at the counter, and ordered their classic vegan ramen, which came with a vegan broth, thin noodles, scallions, sliced tofu and kikurage (wood ear mushrooms). Oh man that ramen was SO GOOD and hit the spot. It was still kind of hard to eat because of my jaw but I took my time and finished as much of it as I could. Definitely a 10/10 and one of the best ramens I've had. And it was only around $15 total!
 
