--- a/_posts/2023-04-03-first-day.markdown
+++ b/_posts/2023-04-03-first-day.markdown
@@ -4,6 +4,7 @@ title:  "First Day of the Blog!"
 date:   2023-04-03 20:00:00 -0400
 categories: jekyll update
 ---
+<!-- <img src="{{site.baseurl | prepend: site.url}}/assets/img/gallery/03_04_gotan1.JPG" alt="gotan1" width="300" height= "400"/> -->
 
 Hello everyone!!!! First day of the blog AHHHHHH!!
 This is a lie because I am actually writing this three days after I made the blog...lol.
