fixed img file path

--- a/_posts/2023-04-03-first-day.markdown
+++ b/_posts/2023-04-03-first-day.markdown
@@ -25,11 +25,11 @@ The coffee was alright and so was the oatmeal...but also I don't think I was in 
 
 After a couple of hours of working though, I got quite hungry. The coffee and oatmeal were definitely not enough to sustain me until dinner, so I went to find some ramen. Heramb suggested Danbo Ramen, which was in the West Village, around a 20 minute walk up from the cafe. I got there and sat by myself at the counter, and ordered their classic vegan ramen, which came with a vegan broth, thin noodles, scallions, sliced tofu and kikurage (wood ear mushrooms). Oh man that ramen was SO GOOD and hit the spot. It was still kind of hard to eat because of my jaw but I took my time and finished as much of it as I could. Definitely a 10/10 and one of the best ramens I've had. And it was only around $15 total!
 
-<img src="{{site.baseurl | prepend: site.url}}/assets/img/03_04_danbo.JPG" alt="danbo" width="300" height= "400"/>
+<img src="{{site.baseurl | prepend: site.url}}/assets/img/gallery/03_04_danbo.JPG" alt="danbo" width="300" height= "400"/>
 
 
 After ramen it was almost time for me to go back home so I just stalled time for a little bit and decided to get tea (remember the only reason I was drinking so many liquids it because solid food was nearly impossible for me to fit in my mouth lmao). I just kinda walked around until I found a cute one called Amano Cafe - I just got a mint tea :tea: and then caught the F train back to Brooklyn.
 
-<img src="{{site.baseurl | prepend: site.url}}/assets/img/03_04_tea.JPG" alt="amano" width="300" height= "400"/>
+<img src="{{site.baseurl | prepend: site.url}}/assets/img/gallery/03_04_tea.JPG" alt="amano" width="300" height= "400"/>
 
 I spent the evening watching Atlanta and drinking a smoothie before going to bed. :zzz:
